--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8d62e5fa",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "abf56b4f",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "f819da52",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "791f2aa2",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
        "(430788, 14)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "776da16d",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ed0b8926",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "722b1bd3",
    "metadata": {},
    "outputs": [
@@ -258,11 +258,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0e1ce6b3",
+   "execution_count": 10,
+   "id": "8c211825",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model reasoning missing:\n",
+      "0\n",
+      "\n",
+      "Dataset size after removing missing reasoning: (430788, 14)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check reasoning field completeness\n",
+    "print(\"\\nModel reasoning missing:\")\n",
+    "print(df['model_answer'].isnull().sum())\n",
+    "\n",
+    "# Drop rows without reasoning (can't extract features)\n",
+    "df_clean = df[df['model_answer'].notna()].copy()\n",
+    "print(f\"\\nDataset size after removing missing reasoning: {df_clean.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d7bd1c66",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import re\n",
+    "\n",
+    "# Token count\n",
+    "df_clean['feat_token_count'] = df_clean['model_answer'].apply(lambda x: len(str(x).split()))\n",
+    "\n",
+    "# Sentence count (periods, exclamation, question marks)\n",
+    "df_clean['feat_sentence_count'] = df_clean['model_answer'].apply(\n",
+    "    lambda x: len(re.findall(r'[.!?]+', str(x)))\n",
+    ")\n",
+    "\n",
+    "# Step markers (1., 2., Step 1, etc.)\n",
+    "df_clean['feat_step_markers'] = df_clean['model_answer'].apply(\n",
+    "    lambda x: len(re.findall(r'\\b(?:step\\s*\\d+|^\\d+\\.|\\n\\d+\\.)', str(x).lower()))\n",
+    ")\n",
+    "\n",
+    "# Average sentence length\n",
+    "df_clean['feat_avg_sentence_len'] = (df_clean['feat_token_count'] / \n",
+    "                                      (df_clean['feat_sentence_count'] + 1))\n",
+    "\n",
+    "# Max sentence length (split by periods, find longest)\n",
+    "def max_sent_len(text):\n",
+    "    sentences = re.split(r'[.!?]+', str(text))\n",
+    "    if not sentences:\n",
+    "        return 0\n",
+    "    return max(len(s.split()) for s in sentences)\n",
+    "\n",
+    "df_clean['feat_max_sentence_len'] = df_clean['model_answer'].apply(max_sent_len)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f256167e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LaTeX operator counts (sum, frac, etc.)\n",
+    "df_clean['feat_latex_operators'] = df_clean['model_answer'].apply(\n",
+    "    lambda x: len(re.findall(r'\\\\(?:frac|sum|int|times|div|sqrt)', str(x)))\n",
+    ")\n",
+    "\n",
+    "# Digit ratio (proportion of characters that are digits)\n",
+    "df_clean['feat_digit_ratio'] = df_clean['model_answer'].apply(\n",
+    "    lambda x: sum(c.isdigit() for c in str(x)) / (len(str(x)) + 1)\n",
+    ")\n",
+    "\n",
+    "# Equation sign density (=, +, -, *, /)\n",
+    "df_clean['feat_equation_signs'] = df_clean['model_answer'].apply(\n",
+    "    lambda x: len(re.findall(r'[=+\\-*/]', str(x)))\n",
+    ")\n",
+    "\n",
+    "# Operator variety (unique math operators)\n",
+    "def operator_variety(text):\n",
+    "    operators = set(re.findall(r'[+\\-*/=<>≤≥]', str(text)))\n",
+    "    return len(operators)\n",
+    "\n",
+    "df_clean['feat_operator_variety'] = df_clean['model_answer'].apply(operator_variety)\n",
+    "\n",
+    "# Code block presence (``````)\n",
+    "df_clean['feat_has_code_block'] = df_clean['model_answer'].apply(\n",
+    "    lambda x: 1 if '```' in str(x) else 0\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0231516e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Connective words (because, therefore, thus, so, hence)\n",
+    "logic_connectives = ['because', 'therefore', 'thus', 'hence', 'since', 'consequently']\n",
+    "df_clean['feat_logic_connectives'] = df_clean['model_answer'].apply(\n",
+    "    lambda x: sum(str(x).lower().count(word) for word in logic_connectives)\n",
+    ")\n",
+    "\n",
+    "# Self-correction markers (wait, actually, correction, mistake)\n",
+    "correction_words = ['wait', 'actually', 'correction', 'mistake', 'error', 'wrong']\n",
+    "df_clean['feat_self_corrections'] = df_clean['model_answer'].apply(\n",
+    "    lambda x: sum(str(x).lower().count(word) for word in correction_words)\n",
+    ")\n",
+    "\n",
+    "# Contradiction indicators (but, however near numbers)\n",
+    "def contradictions_near_numbers(text):\n",
+    "    text_lower = str(text).lower()\n",
+    "    # Find \"but\" or \"however\" within 10 words of a number\n",
+    "    matches = re.findall(r'(?:\\d+.{0,50}(?:but|however))|(?:(?:but|however).{0,50}\\d+)', text_lower)\n",
+    "    return len(matches)\n",
+    "\n",
+    "df_clean['feat_contradiction_markers'] = df_clean['model_answer'].apply(contradictions_near_numbers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1433e277",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Question-to-reasoning overlap (Jaccard similarity)\n",
+    "def jaccard_similarity(text1, text2):\n",
+    "    set1 = set(str(text1).lower().split())\n",
+    "    set2 = set(str(text2).lower().split())\n",
+    "    if not set1 or not set2:\n",
+    "        return 0\n",
+    "    intersection = set1.intersection(set2)\n",
+    "    union = set1.union(set2)\n",
+    "    return len(intersection) / len(union)\n",
+    "\n",
+    "df_clean['feat_question_overlap'] = df_clean.apply(\n",
+    "    lambda row: jaccard_similarity(row['question'], row['model_reasoning']), axis=1\n",
+    ")\n",
+    "\n",
+    "# Extra numbers (numbers in reasoning not in question)\n",
+    "def extract_numbers(text):\n",
+    "    return set(re.findall(r'\\d+\\.?\\d*', str(text)))\n",
+    "\n",
+    "df_clean['feat_extra_numbers'] = df_clean.apply(\n",
+    "    lambda row: len(extract_numbers(row['model_reasoning']) - extract_numbers(row['question'])),\n",
+    "    axis=1\n",
+    ")\n",
+    "\n",
+    "# Final answer formatting (presence of \"Answer:\", \"Final answer:\", etc.)\n",
+    "df_clean['feat_has_answer_marker'] = df_clean['model_reasoning'].apply(\n",
+    "    lambda x: 1 if re.search(r'\\b(?:answer|conclusion|result):', str(x).lower()) else 0\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e62c2be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Type-token ratio (unique words / total words)\n",
+    "def type_token_ratio(text):\n",
+    "    words = str(text).lower().split()\n",
+    "    if not words:\n",
+    "        return 0\n",
+    "    return len(set(words)) / len(words)\n",
+    "\n",
+    "df_clean['feat_type_token_ratio'] = df_clean['model_reasoning'].apply(type_token_ratio)\n",
+    "\n",
+    "# Punctuation density\n",
+    "df_clean['feat_punctuation_density'] = df_clean['model_reasoning'].apply(\n",
+    "    lambda x: len(re.findall(r'[.,;:!?]', str(x))) / (len(str(x)) + 1)\n",
+    ")\n",
+    "\n",
+    "# Parentheses balance (are they properly matched?)\n",
+    "def parentheses_balanced(text):\n",
+    "    count = 0\n",
+    "    for char in str(text):\n",
+    "        if char == '(':\n",
+    "            count += 1\n",
+    "        elif char == ')':\n",
+    "            count -= 1\n",
+    "        if count < 0:\n",
+    "            return 0  # Unbalanced\n",
+    "    return 1 if count == 0 else 0\n",
+    "\n",
+    "df_clean['feat_parentheses_balanced'] = df_clean['model_reasoning'].apply(parentheses_balanced)\n",
+    "\n",
+    "# Repeated n-gram rate (3-grams that appear more than once)\n",
+    "def repeated_trigrams(text):\n",
+    "    words = str(text).lower().split()\n",
+    "    if len(words) < 3:\n",
+    "        return 0\n",
+    "    trigrams = [' '.join(words[i:i+3]) for i in range(len(words)-2)]\n",
+    "    if not trigrams:\n",
+    "        return 0\n",
+    "    unique_trigrams = len(set(trigrams))\n",
+    "    return 1 - (unique_trigrams / len(trigrams))\n",
+    "\n",
+    "df_clean['feat_repeated_trigrams'] = df_clean['model_reasoning'].apply(repeated_trigrams)\n"
+   ]
   }
  ],
  "metadata": {
