--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "8c211825",
    "metadata": {},
    "outputs": [
@@ -268,20 +268,48 @@
      "text": [
       "\n",
       "Model reasoning missing:\n",
-      "0\n",
+      "2637\n",
       "\n",
-      "Dataset size after removing missing reasoning: (430788, 14)\n"
+      "Dataset size after removing missing reasoning: (428151, 14)\n"
      ]
     }
    ],
    "source": [
     "# Check reasoning field completeness\n",
     "print(\"\\nModel reasoning missing:\")\n",
-    "print(df['model_answer'].isnull().sum())\n",
+    "print(df['model_reasoning'].isnull().sum())\n",
     "\n",
     "# Drop rows without reasoning (can't extract features)\n",
-    "df_clean = df[df['model_answer'].notna()].copy()\n",
+    "df_clean = df[df['model_reasoning'].notna()].copy()\n",
     "print(f\"\\nDataset size after removing missing reasoning: {df_clean.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "357fbb36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Prev_messages present:\n",
+      "102234\n",
+      "\n",
+      "Dataset size after keeping only rows with null prev_messages: (328554, 14)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nPrev_messages present:\")\n",
+    "print(df['prev_messages'].notna().sum())\n",
+    "\n",
+    "# Keep only rows where prev_messages is null\n",
+    "df_clean = df[df['prev_messages'].isnull()].copy()\n",
+    "\n",
+    "print(f\"\\nDataset size after keeping only rows with null prev_messages: {df_clean.shape}\")\n"
    ]
   },
   {
@@ -357,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "0231516e",
    "metadata": {},
    "outputs": [],
@@ -386,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "1433e277",
    "metadata": {},
    "outputs": [],
@@ -422,10 +450,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "1e62c2be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 40\u001b[39m\n\u001b[32m     37\u001b[39m     unique_trigrams = \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mset\u001b[39m(trigrams))\n\u001b[32m     38\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[32m1\u001b[39m - (unique_trigrams / \u001b[38;5;28mlen\u001b[39m(trigrams))\n\u001b[32m---> \u001b[39m\u001b[32m40\u001b[39m df_clean[\u001b[33m'\u001b[39m\u001b[33mfeat_repeated_trigrams\u001b[39m\u001b[33m'\u001b[39m] = \u001b[43mdf_clean\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mmodel_answer\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43mapply\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrepeated_trigrams\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\pandas\\core\\series.py:4924\u001b[39m, in \u001b[36mSeries.apply\u001b[39m\u001b[34m(self, func, convert_dtype, args, by_row, **kwargs)\u001b[39m\n\u001b[32m   4789\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mapply\u001b[39m(\n\u001b[32m   4790\u001b[39m     \u001b[38;5;28mself\u001b[39m,\n\u001b[32m   4791\u001b[39m     func: AggFuncType,\n\u001b[32m   (...)\u001b[39m\u001b[32m   4796\u001b[39m     **kwargs,\n\u001b[32m   4797\u001b[39m ) -> DataFrame | Series:\n\u001b[32m   4798\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   4799\u001b[39m \u001b[33;03m    Invoke function on values of Series.\u001b[39;00m\n\u001b[32m   4800\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m   4915\u001b[39m \u001b[33;03m    dtype: float64\u001b[39;00m\n\u001b[32m   4916\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m   4917\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mSeriesApply\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   4918\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m   4919\u001b[39m \u001b[43m        \u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   4920\u001b[39m \u001b[43m        \u001b[49m\u001b[43mconvert_dtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mconvert_dtype\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   4921\u001b[39m \u001b[43m        \u001b[49m\u001b[43mby_row\u001b[49m\u001b[43m=\u001b[49m\u001b[43mby_row\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   4922\u001b[39m \u001b[43m        \u001b[49m\u001b[43margs\u001b[49m\u001b[43m=\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   4923\u001b[39m \u001b[43m        \u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m=\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m-> \u001b[39m\u001b[32m4924\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mapply\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\pandas\\core\\apply.py:1427\u001b[39m, in \u001b[36mSeriesApply.apply\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1424\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.apply_compat()\n\u001b[32m   1426\u001b[39m \u001b[38;5;66;03m# self.func is Callable\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1427\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mapply_standard\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\pandas\\core\\apply.py:1507\u001b[39m, in \u001b[36mSeriesApply.apply_standard\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1501\u001b[39m \u001b[38;5;66;03m# row-wise access\u001b[39;00m\n\u001b[32m   1502\u001b[39m \u001b[38;5;66;03m# apply doesn't have a `na_action` keyword and for backward compat reasons\u001b[39;00m\n\u001b[32m   1503\u001b[39m \u001b[38;5;66;03m# we need to give `na_action=\"ignore\"` for categorical data.\u001b[39;00m\n\u001b[32m   1504\u001b[39m \u001b[38;5;66;03m# TODO: remove the `na_action=\"ignore\"` when that default has been changed in\u001b[39;00m\n\u001b[32m   1505\u001b[39m \u001b[38;5;66;03m#  Categorical (GH51645).\u001b[39;00m\n\u001b[32m   1506\u001b[39m action = \u001b[33m\"\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(obj.dtype, CategoricalDtype) \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1507\u001b[39m mapped = \u001b[43mobj\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_map_values\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   1508\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmapper\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcurried\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mna_action\u001b[49m\u001b[43m=\u001b[49m\u001b[43maction\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconvert\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mconvert_dtype\u001b[49m\n\u001b[32m   1509\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1511\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(mapped) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(mapped[\u001b[32m0\u001b[39m], ABCSeries):\n\u001b[32m   1512\u001b[39m     \u001b[38;5;66;03m# GH#43986 Need to do list(mapped) in order to get treated as nested\u001b[39;00m\n\u001b[32m   1513\u001b[39m     \u001b[38;5;66;03m#  See also GH#25959 regarding EA support\u001b[39;00m\n\u001b[32m   1514\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m obj._constructor_expanddim(\u001b[38;5;28mlist\u001b[39m(mapped), index=obj.index)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\pandas\\core\\base.py:921\u001b[39m, in \u001b[36mIndexOpsMixin._map_values\u001b[39m\u001b[34m(self, mapper, na_action, convert)\u001b[39m\n\u001b[32m    918\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(arr, ExtensionArray):\n\u001b[32m    919\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m arr.map(mapper, na_action=na_action)\n\u001b[32m--> \u001b[39m\u001b[32m921\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43malgorithms\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmap_array\u001b[49m\u001b[43m(\u001b[49m\u001b[43marr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmapper\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mna_action\u001b[49m\u001b[43m=\u001b[49m\u001b[43mna_action\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconvert\u001b[49m\u001b[43m=\u001b[49m\u001b[43mconvert\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\pandas\\core\\algorithms.py:1743\u001b[39m, in \u001b[36mmap_array\u001b[39m\u001b[34m(arr, mapper, na_action, convert)\u001b[39m\n\u001b[32m   1741\u001b[39m values = arr.astype(\u001b[38;5;28mobject\u001b[39m, copy=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m   1742\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m na_action \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1743\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mlib\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmap_infer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalues\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmapper\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconvert\u001b[49m\u001b[43m=\u001b[49m\u001b[43mconvert\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1744\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   1745\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m lib.map_infer_mask(\n\u001b[32m   1746\u001b[39m         values, mapper, mask=isna(values).view(np.uint8), convert=convert\n\u001b[32m   1747\u001b[39m     )\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mlib.pyx:2972\u001b[39m, in \u001b[36mpandas._libs.lib.map_infer\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 30\u001b[39m, in \u001b[36mrepeated_trigrams\u001b[39m\u001b[34m(text)\u001b[39m\n\u001b[32m     27\u001b[39m df_clean[\u001b[33m'\u001b[39m\u001b[33mfeat_parentheses_balanced\u001b[39m\u001b[33m'\u001b[39m] = df_clean[\u001b[33m'\u001b[39m\u001b[33mmodel_answer\u001b[39m\u001b[33m'\u001b[39m].apply(parentheses_balanced)\n\u001b[32m     29\u001b[39m \u001b[38;5;66;03m# Repeated n-gram rate (3-grams that appear more than once)\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m30\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mrepeated_trigrams\u001b[39m(text):\n\u001b[32m     31\u001b[39m     words = \u001b[38;5;28mstr\u001b[39m(text).lower().split()\n\u001b[32m     32\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(words) < \u001b[32m3\u001b[39m:\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
    "source": [
     "# Type-token ratio (unique words / total words)\n",
     "def type_token_ratio(text):\n",
@@ -434,10 +481,10 @@
     "        return 0\n",
     "    return len(set(words)) / len(words)\n",
     "\n",
-    "df_clean['feat_type_token_ratio'] = df_clean['model_reasoning'].apply(type_token_ratio)\n",
+    "df_clean['feat_type_token_ratio'] = df_clean['model_answer'].apply(type_token_ratio)\n",
     "\n",
     "# Punctuation density\n",
-    "df_clean['feat_punctuation_density'] = df_clean['model_reasoning'].apply(\n",
+    "df_clean['feat_punctuation_density'] = df_clean['model_answer'].apply(\n",
     "    lambda x: len(re.findall(r'[.,;:!?]', str(x))) / (len(str(x)) + 1)\n",
     ")\n",
     "\n",
@@ -453,7 +500,7 @@
     "            return 0  # Unbalanced\n",
     "    return 1 if count == 0 else 0\n",
     "\n",
-    "df_clean['feat_parentheses_balanced'] = df_clean['model_reasoning'].apply(parentheses_balanced)\n",
+    "df_clean['feat_parentheses_balanced'] = df_clean['model_answer'].apply(parentheses_balanced)\n",
     "\n",
     "# Repeated n-gram rate (3-grams that appear more than once)\n",
     "def repeated_trigrams(text):\n",
@@ -466,7 +513,146 @@
     "    unique_trigrams = len(set(trigrams))\n",
     "    return 1 - (unique_trigrams / len(trigrams))\n",
     "\n",
-    "df_clean['feat_repeated_trigrams'] = df_clean['model_reasoning'].apply(repeated_trigrams)\n"
+    "df_clean['feat_repeated_trigrams'] = df_clean['model_answer'].apply(repeated_trigrams)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efbb777d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# One-hot encode model_name (or use label encoding)\n",
+    "# Option A: One-hot (creates multiple binary columns)\n",
+    "model_dummies = pd.get_dummies(df_clean['model_name'], prefix='model')\n",
+    "df_clean = pd.concat([df_clean, model_dummies], axis=1)\n",
+    "\n",
+    "# Option B: Label encoding (single numeric column) - simpler for initial exploration\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "le_model = LabelEncoder()\n",
+    "df_clean['model_name_encoded'] = le_model.fit_transform(df_clean['model_name'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2694b3f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Select only numeric feature columns\n",
+    "feature_cols = [col for col in df_clean.columns if col.startswith('feat_')]\n",
+    "\n",
+    "# Summary statistics\n",
+    "print(\"\\nFeature Summary Statistics:\")\n",
+    "print(df_clean[feature_cols].describe())\n",
+    "\n",
+    "# Correlation with label\n",
+    "print(\"\\nCorrelation with label:\")\n",
+    "correlations = df_clean[feature_cols + ['label']].corr()['label'].sort_values(ascending=False)\n",
+    "print(correlations)\n",
+    "\n",
+    "# Correlation heatmap\n",
+    "plt.figure(figsize=(12, 10))\n",
+    "sns.heatmap(df_clean[feature_cols].corr(), annot=False, cmap='coolwarm')\n",
+    "plt.title('Feature Correlation Heatmap')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('feature_correlation_heatmap.png')\n",
+    "plt.show()\n",
+    "\n",
+    "# Distribution plots for top correlated features\n",
+    "top_features = correlations.abs().sort_values(ascending=False)[1:6].index\n",
+    "for feat in top_features:\n",
+    "    plt.figure(figsize=(10, 4))\n",
+    "    \n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    df_clean[feat].hist(bins=50)\n",
+    "    plt.xlabel(feat)\n",
+    "    plt.ylabel('Frequency')\n",
+    "    plt.title(f'Distribution of {feat}')\n",
+    "    \n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    df_clean.boxplot(column=feat, by='label')\n",
+    "    plt.xlabel('Label (0=Incorrect, 1=Correct)')\n",
+    "    plt.ylabel(feat)\n",
+    "    plt.title(f'{feat} by Correctness')\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f'{feat}_analysis.png')\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94fead56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Detect outliers using IQR method\n",
+    "for feat in feature_cols:\n",
+    "    Q1 = df_clean[feat].quantile(0.25)\n",
+    "    Q3 = df_clean[feat].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    outlier_count = ((df_clean[feat] < (Q1 - 1.5 * IQR)) | \n",
+    "                     (df_clean[feat] > (Q3 + 1.5 * IQR))).sum()\n",
+    "    print(f\"{feat}: {outlier_count} outliers ({outlier_count/len(df_clean)*100:.2f}%)\")\n",
+    "\n",
+    "# Standardization (z-score)\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "df_clean[feature_cols] = scaler.fit_transform(df_clean[feature_cols])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7c112a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group split by model_name (as specified in proposal)\n",
+    "unique_models = df_clean['model_name'].unique()\n",
+    "np.random.seed(42)\n",
+    "np.random.shuffle(unique_models)\n",
+    "\n",
+    "n_models = len(unique_models)\n",
+    "train_models = unique_models[:int(0.7 * n_models)]\n",
+    "val_models = unique_models[int(0.7 * n_models):int(0.85 * n_models)]\n",
+    "test_models = unique_models[int(0.85 * n_models):]\n",
+    "\n",
+    "train_df = df_clean[df_clean['model_name'].isin(train_models)]\n",
+    "val_df = df_clean[df_clean['model_name'].isin(val_models)]\n",
+    "test_df = df_clean[df_clean['model_name'].isin(test_models)]\n",
+    "\n",
+    "print(f\"\\nTrain: {len(train_df)} ({len(train_df)/len(df_clean)*100:.1f}%)\")\n",
+    "print(f\"Val: {len(val_df)} ({len(val_df)/len(df_clean)*100:.1f}%)\")\n",
+    "print(f\"Test: {len(test_df)} ({len(test_df)/len(df_clean)*100:.1f}%)\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02f18ad0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save processed datasets\n",
+    "train_df.to_csv('train_dataset.csv', index=False)\n",
+    "val_df.to_csv('val_dataset.csv', index=False)\n",
+    "test_df.to_csv('test_dataset.csv', index=False)\n",
+    "\n",
+    "# Also save a combined version\n",
+    "df_clean.to_csv('full_cleaned_dataset.csv', index=False)\n",
+    "\n",
+    "print(\"\\nFinal dataset characteristics:\")\n",
+    "print(f\"Total samples: {len(df_clean)}\")\n",
+    "print(f\"Features: {len(feature_cols)}\")\n",
+    "print(f\"Label distribution: {df_clean['label'].value_counts(normalize=True).to_dict()}\")\n"
    ]
   }
  ],
